--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -47,17 +47,17 @@
       src: catalogue.service 
       dest: /etc/systemd/system/catalogue.service 
 
-  - name: systemctl deamon reload 
+  - name: systemctl daemon reload 
     ansible.builtin.systemd_service: 
-      deamon_reload: true 
+      daemon_reload: true 
 
   - name: start and enable catalogue 
     ansible.builtin.service: 
       name: catalogue 
       state: started 
       enabled: yes 
-  
-                     
+
+
 
 
 
