--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -57,6 +57,25 @@
       state: started 
       enabled: yes 
 
+  - name: copying mongo.repo file to a remote location 
+    ansible.builtin.copy: 
+      src: mongo.repo 
+      dest: /etc/yum.repos.d/mongo.repo 
+
+  - name: install mongodb client 
+    ansible.builtin.dnf: 
+      name: mongodb-mongosh 
+      state: present 
+
+  - name: products loaded or not 
+    ansible.builtin.command: mongosh --host mongodb.deepthi.tech --eval 'db.getMongo().getDBNames().indexOf("catalogue")' 
+    register: dataload_output 
+
+  - name: print output 
+    ansible.builtin.debug: 
+      msg: "{{ dataload_output }}" 
+                    
+
 
 
 
