--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -74,7 +74,11 @@
   - name: print output 
     ansible.builtin.debug: 
       msg: "{{ dataload_output }}" 
-                    
+
+  - name: load products 
+    ansible.builtin.command: mongosh --host MONGODB-SERVER-IPADDRESS </app/db/master-data.js
+    when: catalogue_output.stdout < 0  
+                 
 
 
 
