--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -77,8 +77,8 @@
 
   - name: load products 
     ansible.builtin.command: mongosh --host MONGODB-SERVER-IPADDRESS </app/db/master-data.js
-    when: catalogue_output.stdout < 0  
-                 
+    when: catalogue_output.stdout | int < 0  
+
 
 
 
