--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -77,7 +77,7 @@
 
   - name: load products 
     ansible.builtin.shell: mongosh --host mongodb.deepthi.tech </app/db/master-data.js
-    when: catalogue_output.stdout | int < 0  
+    when: dataload_output.stdout | int < 0  
 
 
 
