--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
 [mongodb]
-mongodb.deepthi.tech 
+mongodb.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321 
 
 [catalogue]
-catalogue.deepthi.tech 
+catalogue.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321 
