--- a/inventory.ini
+++ b/inventory.ini
@@ -6,3 +6,9 @@ catalogue.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321
 
 [redis]
 redis.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321 
+
+[user]
+user.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321 
+
+[cart] 
+cart.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321 
