--- a/frontend.yaml
+++ b/frontend.yaml
@@ -18,4 +18,20 @@
       name: nginx 
       state: started 
       enabled: yes 
-          
+
+  - name: remove html directory 
+    ansible.builtin.file: 
+      path: /usr/share/nginx/html
+      state: absent 
+
+  - name: create html directory 
+    ansible.builtin.file: 
+      path: /usr/share/nginx/html 
+      state: directory   
+
+  - name: Download frontend code 
+    ansible.builtin.get_url: 
+      url: https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip 
+      dest: /tmp/frontend.zip 
+
+              
