--- a/frontend.yaml
+++ b/frontend.yaml
@@ -34,4 +34,9 @@
       url: https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip 
       dest: /tmp/frontend.zip 
 
-              
+  - name: unzipping a file 
+    ansible.builtin.unarchive:
+      src: /tmp/frontend.zip
+      dest: /usr/share/nginx/html/
+      remote_src: yes   
+                
