--- a/frontend.yaml
+++ b/frontend.yaml
@@ -39,4 +39,13 @@
       src: /tmp/frontend.zip
       dest: /usr/share/nginx/html/
       remote_src: yes   
-                
+
+  - name: remove default nginx configuration 
+    ansible.builtin.file: 
+      path: /etc/nginx/nginx.conf 
+      state: absent 
+
+  - name: copy roboshop nginx configuration 
+    ansible.builtin.copy: 
+      src: nginx.conf 
+      dest: /etc/nginx/nginx.conf                 
