--- a/inventory.ini
+++ b/inventory.ini
@@ -14,4 +14,4 @@ user.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321
 cart.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321 
 
 [frontend] 
-deepthi.tech ansible_user=ec2-user ansible_password=DevOps321 
+frontend.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321 
