--- a/mysql.yaml
+++ b/mysql.yaml
@@ -10,5 +10,6 @@
   - name: start mysqld service 
     ansible.builtin.service: 
       name: mysqld 
-      state: present 
+      state: started 
       enabled: yes     
+      
