--- a/inventory.ini
+++ b/inventory.ini
@@ -17,4 +17,7 @@ cart.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321
 frontend.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321 
 
 [mysql]
-mysql.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321
+mysql.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321 
+
+[shipping] 
+shipping.deepthi.tech ansible_user=ec2-user ansible_password=DevOps321 
