--- a/shipping.yaml
+++ b/shipping.yaml
@@ -4,8 +4,11 @@
   tasks: 
   - name: install maven 
     ansible.builtin.package: 
-      name: maven 
+      name: "{{ item }}" 
       state: present 
+    loop: 
+    - PyMySQL 
+    - maven   
 
   - name: create system user 
     ansible.builtin.user: 
