--- a/shipping.yaml
+++ b/shipping.yaml
@@ -4,11 +4,13 @@
   tasks: 
   - name: install maven 
     ansible.builtin.package: 
-      name: "{{ item }}" 
+      name: maven  
       state: present 
-    loop: 
-    - PyMySQL 
-    - maven   
+
+  - name: install PyMySQL 
+    ansible.builtin.pip: 
+      name: PyMySQL 
+      executable: pip3.9 
 
   - name: create system user 
     ansible.builtin.user: 
