--- a/shipping.yaml
+++ b/shipping.yaml
@@ -4,8 +4,11 @@
   tasks: 
   - name: install maven 
     ansible.builtin.package: 
-      name: maven  
+      name: "{{ item }}"  
       state: present 
+    loop: 
+    - cryptography 
+    - maven  
 
   - name: install PyMySQL 
     ansible.builtin.pip: 
