--- a/shipping.yaml
+++ b/shipping.yaml
@@ -4,16 +4,16 @@
   tasks: 
   - name: install maven 
     ansible.builtin.package: 
-      name: "{{ item }}"  
-      state: present 
-    loop: 
-    - cryptography 
-    - maven  
+      name: maven   
+      state: present   
 
-  - name: install PyMySQL 
+  - name: install PyMySQL and cryptography 
     ansible.builtin.pip: 
-      name: PyMySQL 
+      name: "{{ item }}" 
       executable: pip3.9 
+    loop:
+    - cryptography 
+    - PyMySQL  
 
   - name: create system user 
     ansible.builtin.user: 
