--- a/shipping.yaml
+++ b/shipping.yaml
@@ -70,11 +70,29 @@
       name: mysql 
       state: present  
 
-  - name: connect to mysql using app user 
-    community.mysql.mysql_info: 
+  # - name: connect to mysql using app user 
+  #   community.mysql.mysql_info: 
+  #     login_user: shipping 
+  #     login_password: RoboShop@1 
+  #     login_host: mysql.deepthi.tech 
+  #     login_db: cities 
+
+  - name: import data 
+    community.mysql.mysql_db: 
       login_user: shipping 
       login_password: RoboShop@1 
       login_host: mysql.deepthi.tech 
-      login_db: cities 
+      state: import 
+      target: "{{ item }}"
+    loop:
+    - /app/db/schema.sql 
+    - /app/db/app-user.sql 
+    - /app/db/master-data.sql   
+
+  - name: restart shipping 
+    ansible.builtin.service:
+      name: shipping 
+      state: restarted 
+
 
    
