--- a/shipping.yaml
+++ b/shipping.yaml
@@ -79,6 +79,7 @@
 
   - name: import data 
     community.mysql.mysql_db: 
+      name: all 
       login_user: shipping 
       login_password: RoboShop@1 
       login_host: mysql.deepthi.tech 
