--- a/payment.yaml
+++ b/payment.yaml
@@ -4,7 +4,7 @@
   tasks: 
   - name: install python3 packages 
     ansible.builtin.package: 
-      name: 
+      name: "{{ item }}"
       state: present 
     loop: 
     - python3   
