--- a/nginx.conf
+++ b/nginx.conf
@@ -51,7 +51,7 @@ http {
         location /api/user/ { proxy_pass http://user.deepthi.tech:8080/; }
         location /api/cart/ { proxy_pass http://cart.deepthi.tech:8080/; }
         location /api/shipping/ { proxy_pass http://shipping.deepthi.tech:8080/; }
-        location /api/payment/ { proxy_pass http://localhost:8080/; }
+        location /api/payment/ { proxy_pass http://payment.deepthi.tech:8080/; }
 
         location /health {
           stub_status on;
