--- a/payment.yaml
+++ b/payment.yaml
@@ -3,9 +3,9 @@
   become: yes 
   tasks: 
   - name: install python3 packages 
-    ansible.builtin.package: 
+    ansible.builtin.dnf: 
       name: "{{ item }}"
-      state: present 
+      state: installed   
     loop: 
     - python3   
     - gcc 
@@ -32,7 +32,7 @@
     ansible.builtin.unarchive: 
       src: /tmp/payment.zip 
       dest: /app 
-      remote_src: yes 
+      remote_src: yes  
 
   - name: install dependencies 
     args: 
